--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ body {
 font-family: 'Comfortaa', serif;
 font-size: 18px;
 }
+
+iframe {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
+
+img {
+    width: 50%;
+    height: auto;
+    -ms-grid-column-align: center;
+  }
