--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@ iframe {
     height: 100%;
     padding: 10px;
 }
+
+img {
+    width: 50%;
+    height: auto;
+    -ms-grid-column-align: center;
+  }
