--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ font-size: 18px;
 }
 
 img {
-    width: 40%;
-    height: auto;
+    width: 10%;
+    height: 50%;
     -ms-grid-column-align: center;
 }
 
