--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ font-size: 18px;
 }
 
 img {
-    width: 10%;
-    height: 50%;
+    width: 30%;
+    height: auto;
     -ms-grid-column-align: center;
 }
 
